# approx-sparql-querying

./: CMakeLists.txt  README.md  main.cpp
